Navbar is no longer overlapping the last portion of the page.

--- a/NMWeb/src/app/app.component.scss
+++ b/NMWeb/src/app/app.component.scss
@@ -16,7 +16,7 @@ app-header {
     //margin-left: 0px;
     margin-left: inherit;
 //+    margin-left: 0px;
-    margin-bottom:60px;
+    margin-bottom:80px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
