--- a/NMWeb/src/app/topics-map-shared/topics-map.component.scss
+++ b/NMWeb/src/app/topics-map-shared/topics-map.component.scss
@@ -1,3 +1,7 @@
+:host {
+  overflow-y: hidden !important;
+}
+
 .container {
   width: 100%;
   height: 100%;
